--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     <section class="hero">
         <div class="hero-text">
-            <h1>PureStream: Water You Can Trust</h1>
-            <p>Better than tap water. Safer, cleaner, and eco-friendly. Join the elite today.</p>
+            <h1 class="black-text">PureStream: Water You Can Trust</h1>
+            <p class="black-text">Better than tap water. Safer, cleaner, and eco-friendly. Join the elite today.</p>
             <a href="#elite-club" class="cta">Join the Elite Club</a>
         </div>
     </section>
