--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 
     <section class="hero">
         <div class="hero-text">
-            <h1>PureStream: Water You Can Trust</h1>
-            <p>Better than tap water. Safer, cleaner, and eco-friendly. Join the elite today.</p>
+            <h1 class="black-text">PureStream: Water You Can Trust</h1>
+            <p class="black-text">Better than tap water. Safer, cleaner, and eco-friendly. Join the elite today.</p>
             <a href="#elite-club" class="cta">Join the Elite Club</a>
         </div>
     </section>
 
     <section id="why" class="section">
         <h2>Why Choose PureStream?</h2>
-        <p>Did you know tap water could contain harmful chemicals and bacteria? Don't risk it! PureStream filters your water through **seven layers** of natural minerals, making it the cleanest choice for your health.</p>
+        <p>Did you know tap water could contain harmful chemicals and bacteria? Don't risk it! PureStream filters your water through <strong>seven layers</strong> of natural minerals, making it the cleanest choice for your health.</p>
     </section>
 
     <section id="eco-friendly" class="section">
@@ -44,7 +44,7 @@
 
     <section id="elite-club" class="section elite">
         <h2>Join the Elite PureStream Club</h2>
-        <p>Be part of something bigger. When you choose PureStream, you're joining a community that values health, the environment, and elite standards. Get your first bottle for only $1.99! PureStream – **pure water, better life**.</p>
+        <p>Be part of something bigger. When you choose PureStream, you're joining a community that values health, the environment, and elite standards. Get your first bottle for only $1.99! PureStream – <strong>pure water, better life</strong>.</p>
         <button id="joinBtn">Join Now</button>
     </section>
 
